--- a/about.html
+++ b/about.html
@@ -41,14 +41,13 @@
     </div>
     <!-- Spinner End -->
 
-
     <!-- Topbar Start -->
     <div class="container-fluid bg-light p-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4"style= "color: #070707;">
                     <small class="fa fa-map-marker-alt me-2"></small>
-                    <small>พระนครศรีอยุธยา, ประเทศไทย</small>
+                    <small>เลขที่139 หมู่1,ตำบลสนับทึบ อำเภอวังน้อย จังหวัดพระนครศรีอยุธยา 13170, ประเทศไทย</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center py-3"style= "color: #070707;">
                     <small class="far fa-clock me-2"></small>
@@ -58,7 +57,11 @@
             <div class="col-lg-5 px-5 text-end"style= "color: #070707;">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
                     <small class="fa fa-phone-alt me-2"></small>
-                    <small>+063-849-3429</small>
+                    <small>+06-5145-3994</small>
+                </div>
+                <div class="h-100 d-inline-flex align-items-center py-3 me-4">
+                    <small class="fa fa-envelope me-3"></small>
+                    <small>phoenixforlife.foundation@gmail.com</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <a class="btn btn-sm-square rounded-circle bg-white me-1" href=""><i class="fab fa-facebook-f"style= "color: #070707;"></i></a>
@@ -69,11 +72,10 @@
     </div>
     <!-- Topbar End -->
 
-
        <!-- Navbar Start -->
        <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h1 class="m-0"style= "font-family: 'Kanit';color: #070707;"><img src="img/logo.png" alt="" style="height: 200px ;width: 200px;"></i>มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์</h1>
+            <h1 class="m-0"style= "font-family: 'Kanit';color: #070707;"><img src="img/logo.webp" alt="" style="height: 200px ;width: 200px;"></i>มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์</h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -90,6 +92,7 @@
                 </div>
                 <a href="service.html" class="nav-item nav-link">โครงการของเรา</a>
                 <a href="donate.html" class="nav-item nav-link">บริจาค</a>
+                <a href="blog.html" class="nav-item nav-link">ข่าวสาร</a>
                 <a href="contact.html" class="nav-item nav-link">ติดต่อเรา</a>
             </div>
         </div>
@@ -99,7 +102,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">เกี่ยวกับมูลนิธิเรา</h1>
+            <h1 class="display-3 text-white mb-3 animated slideInDown"style= "font-family: 'Kanit';">เกี่ยวกับมูลนิธิเรา</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="#">หน้าหลัก</a></li>
@@ -111,19 +114,18 @@
     </div>
     <!-- Page Header End -->
 
-
     <!-- About Start -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="d-flex flex-column">
-                        <img class="img-fluid rounded w-75 align-self-end" src="img/about-1.jpg" alt="">
-                        <img class="img-fluid rounded w-50 bg-white pt-3 pe-3" src="img/about-2.png" alt="" style="margin-top: -25%;">
+                        <img class="img-fluid rounded w-75 align-self-end" src="img/about-1.webp" alt="">
+                        <img class="img-fluid rounded w-50 bg-white pt-3 pe-3" src="img/about-2.webp" alt="" style="margin-top: -25%;">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;">เกี่ยวกับมูลนิธิของเรา</h1>
+                    <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;"><img src="img/icon/information-button.webp" alt="" style="height: 60px ;width: 60px;">เกี่ยวกับมูลนิธิของเรา</h1>
                     <h2 class="mb-4"style= "font-family: 'Kanit';color: #070707;">ผู้ร่วมก่อตั้งมูลนิธิฟีนิกซ์ ฟอร์ ไลฟท์</h2>
                     <p style= "font-family: 'Kanit';color: #070707;">ปัจจุบัน ในสังคมของเรา ยังคงมีปัญหาต่างๆอยู่มากมายที่เราคนไทยต้องช่วยกันคนละไม้คนละมือ เพื่อให้ประเทศไทยเป็นประเทศที่หน้าอยู่และเจริญรุ่งเรืองขึ้น ตัวผมเองขอเป็นอีกส่วนหนึ่งในการช่วยเหลือ. </p>
                     <p class="mb-4"style= "font-family: 'Kanit';color: #070707;">มูลนิธินี้เป็นอีกหนึ่งความฝัน ที่ตัวผมเองอยากจะทำ ในปี 2667 นี้ ผมจึงก่อตั้งมูลนิธิ ฟีนิกซ์ ฟอร์ ไลทฟ์ เพื่อมุ่งเน้นการช่วยเหลือ เด็กกำพร้าที่ขาดผู้ใหญ่ดูแล เพราะเด็กเหล่านี้จะเติบโตเป็นผู้ใหญ่ที่มีคุณภาพในวันข้างหน้านอกจากนี้
@@ -143,72 +145,72 @@
     </div>
     <!-- About End -->
 
-    <!-- Feature Start -->
-    <div class="container-fluid overflow-hidden my-5 px-lg-0"style="background: linear-gradient(to right, #c02425, #f0cb35);">
-        <div class="container feature px-lg-0">
-            <div class="row g-0 mx-lg-0">
-                <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="p-lg-5 ps-lg-0">
-                        <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #050505;">อาสาสมัคร</h1>
-                        <h2 style= "font-family: 'Kanit';color: #050505;">สนใจเข้าร่วมทำความดีเพื่อสังคมกับเรา</h2>
-                        <p class="mb-4 pb-2" style= "color: #050505;">เราต้องการผู้ที่มีอุดมการณ์เดียวกันกับเรา อยากช่วยพัฒนาทำให้สังคมในปัจจุบันดีขึ้น ติดต่อเข้าร่วมกับเราหรือบริจาคตาม ข้อมูลด้านล่างนี้ได้เลย ขอบคุณสำหรับทุกท่าน.</p>
-                        <div class="row g-4">
-                            <div class="col-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
-                                        <i class="fa fa-phone-square" style= "color: #050505;"></i>
-                                    </div>
-                                    <div class="ms-4">
-                                        <p class="mb-2"style= "font-family: 'Kanit';color: #070707;">+063-849-3429</p>
-                                        <h5 class="mb-0"style= "font-family: 'Kanit';color: #070707;">โทรศัพท์</h5>
-                                    </div>
+ <!-- Feature Start -->
+ <div class="container-fluid overflow-hidden my-5 px-lg-0"style="background: linear-gradient(to right, #c02425, #f0cb35);">
+    <div class="container feature px-lg-0">
+        <div class="row g-0 mx-lg-0">
+            <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
+                <div class="p-lg-5 ps-lg-0">
+                    <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #050505;"><img src="img/icon/love.webp" alt="" style="height: 60px ;width: 60px;">อาสาสมัคร</h1>
+                    <h2 style= "font-family: 'Kanit';color: #050505;">สนใจเข้าร่วมทำความดีเพื่อสังคมกับเรา</h2>
+                    <p class="mb-4 pb-2" style= "color: #050505;">เราต้องการผู้ที่มีอุดมการณ์เดียวกันกับเรา อยากช่วยพัฒนาทำให้สังคมในปัจจุบันดีขึ้น ติดต่อเข้าร่วมกับเราหรือบริจาคตาม ข้อมูลด้านล่างนี้ได้เลย ขอบคุณสำหรับทุกท่าน.</p>
+                    <div class="row g-4">
+                        <div class="col-6">
+                            <div class="d-flex align-items-center">
+                                <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
+                                    <i class="fa fa-phone-square" style= "color: #050505;"></i>
+                                </div>
+                                <div class="ms-4">
+                                    <p class="mb-2"style= "font-family: 'Kanit';color: #070707;">+06-5145-3994</p>
+                                    <h5 class="mb-0"style= "font-family: 'Kanit';color: #070707;">โทรศัพท์</h5>
                                 </div>
                             </div>
-                            <div class="col-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
-                                        <i class="fa fa-envelope" style= "color: #050505;"></i>
-                                    </div>
-                                    <div class="ms-4">
-                                        <p class=" mb-2"style= "font-family: 'Kanit';color: #070707;">@mail.com</p>
-                                        <h5 class=" mb-0"style= "font-family: 'Kanit';color: #070707;">อีเมล์</h5>
-                                    </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="d-flex align-items-center">
+                                <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
+                                    <i class="fa fa-envelope" style= "color: #050505;"></i>
+                                </div>
+                                <div class="ms-4">
+                                    <p class=" mb-2"style= "font-family: 'Kanit';color: #070707;font-size:14px">phoenixforlife.foundation@gmail.com</p>
+                                    <h5 class=" mb-0"style= "font-family: 'Kanit';color: #070707;">อีเมล์</h5>
                                 </div>
                             </div>
-                            <div class="col-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
-                                        <i class="fa fa-barcode"style= "color: #050505;"></i>
-                                    </div>
-                                    <div class="ms-4">
-                                        <p class=" mb-2"style= "font-family: 'Kanit';color: #070707;">00-000-0000</p>
-                                        <h5 class=" mb-0"style= "font-family: 'Kanit';color: #070707;">บัญชีธนาคารรับบริจาค</h5>
-                                    </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="d-flex align-items-center">
+                                <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
+                                    <i class="fa fa-barcode"style= "color: #050505;"></i>
+                                </div>
+                                <div class="ms-4">
+                                    <p class=" mb-2"style= "font-family: 'Kanit';color: #070707;">00-000-0000</p>
+                                    <h5 class=" mb-0"style= "font-family: 'Kanit';color: #070707;">บัญชีธนาคารรับบริจาค</h5>
                                 </div>
                             </div>
-                            <div class="col-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
-                                        <i class="fa fa-hourglass-start"style= "color: #050505;"></i>
-                                    </div>
-                                    <div class="ms-4">
-                                        <p class="mb-2"style= "font-family: 'Kanit';color: #070707;">จ.-ศ.09.00น.-16.00 น.</p>
-                                        <h5 class=" mb-0"style= "font-family: 'Kanit';color: #070707;">เวลาทำการ</h5>
-                                    </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="d-flex align-items-center">
+                                <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
+                                    <i class="far fa-clock"style= "color: #050505;"></i>
+                                </div>
+                                <div class="ms-4">
+                                    <p class="mb-2"style= "font-family: 'Kanit';color: #070707;">จ.-ศ.09.00น.-16.00 น.</p>
+                                    <h5 class=" mb-0"style= "font-family: 'Kanit';color: #070707;">เวลาทำการ</h5>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
-                    <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/feature.jpg" style="object-fit: cover;" alt="">
-                    </div>
+            </div>
+            <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
+                <div class="position-relative h-100">
+                    <img class="position-absolute img-fluid w-100 h-100" src="img/feature.webp" style="object-fit: cover;" alt="">
                 </div>
             </div>
         </div>
     </div>
-    <!-- Feature End -->
+</div>
+<!-- Feature End -->
 
   <!-- Footer Start -->
   <div class="container-fluid  text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s"style="background: linear-gradient(to right, #c02425, #f0cb35);">
@@ -216,9 +218,9 @@
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
                 <h5 class="mb-4"style= "font-family: 'Kanit';color: #050505;">ที่ตั้งมูลนิธิ</h5>
-                <p class="mb-2"style= "color: #050505;"><i class="fa fa-map-marker-alt me-3"></i>พระนครศรีอยุธยา, ประเทศไทย</p>
-                <p class="mb-2"style= "color: #050505;"><i class="fa fa-phone-alt me-3"></i>+063-849-3429</p>
-                <p class="mb-2" style= "color: #050505;"><i class="fa fa-envelope me-3"></i>@mail.com</p>
+                <p class="mb-2"style= "color: #050505;"><i class="fa fa-map-marker-alt me-3"></i>เลขที่139 หมู่1,ตำบลสนับทึบ อำเภอวังน้อย จังหวัดพระนครศรีอยุธยา 13170, ประเทศไทย</p>
+                <p class="mb-2"style= "color: #050505;"><i class="fa fa-phone-alt me-3"></i>+06-5145-3994</p>
+                <p class="mb-2" style= "color: #050505;"><i class="fa fa-envelope me-3"></i>phoenixforlife.foundation@gmail.com</p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-youtube"></i></a>
