--- a/donate.html
+++ b/donate.html
@@ -47,7 +47,7 @@
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4"style= "color: #070707;">
                     <small class="fa fa-map-marker-alt me-2"></small>
-                    <small>พระนครศรีอยุธยา, ประเทศไทย</small>
+                    <small>เลขที่139 หมู่1,ตำบลสนับทึบ อำเภอวังน้อย จังหวัดพระนครศรีอยุธยา 13170, ประเทศไทย</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center py-3"style= "color: #070707;">
                     <small class="far fa-clock me-2"></small>
@@ -57,7 +57,11 @@
             <div class="col-lg-5 px-5 text-end"style= "color: #070707;">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
                     <small class="fa fa-phone-alt me-2"></small>
-                    <small>+063-849-3429</small>
+                    <small>+06-5145-3994</small>
+                </div>
+                <div class="h-100 d-inline-flex align-items-center py-3 me-4">
+                    <small class="fa fa-envelope me-3"></small>
+                    <small>phoenixforlife.foundation@gmail.com</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <a class="btn btn-sm-square rounded-circle bg-white me-1" href=""><i class="fab fa-facebook-f"style= "color: #070707;"></i></a>
@@ -68,10 +72,10 @@
     </div>
     <!-- Topbar End -->
 
-    <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
+       <!-- Navbar Start -->
+       <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h1 class="m-0"style= "font-family: 'Kanit';color: #070707;"><img src="img/logo.png" alt="" style="height: 200px ;width: 200px;"></i>มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์</h1>
+            <h1 class="m-0"style= "font-family: 'Kanit';color: #070707;"><img src="img/logo.webp" alt="" style="height: 200px ;width: 200px;"></i>มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์</h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -88,6 +92,7 @@
                 </div>
                 <a href="service.html" class="nav-item nav-link">โครงการของเรา</a>
                 <a href="donate.html" class="nav-item nav-link">บริจาค</a>
+                <a href="blog.html" class="nav-item nav-link">ข่าวสาร</a>
                 <a href="contact.html" class="nav-item nav-link">ติดต่อเรา</a>
             </div>
         </div>
@@ -97,7 +102,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">บริจาคช่วยสมทบทุนโครงการ</h1>
+            <h1 class="display-3 text-white mb-3 animated slideInDown"style= "font-family: 'Kanit';">บริจาคช่วยสมทบทุนโครงการ</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="#">หน้าหลัก</a></li>
