--- a/team.html
+++ b/team.html
@@ -41,13 +41,13 @@
     </div>
     <!-- Spinner End -->
 
-    <!-- Topbar Start -->
-    <div class="container-fluid bg-light p-0 wow fadeIn" data-wow-delay="0.1s">
+      <!-- Topbar Start -->
+      <div class="container-fluid bg-light p-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4"style= "color: #070707;">
                     <small class="fa fa-map-marker-alt me-2"></small>
-                    <small>พระนครศรีอยุธยา, ประเทศไทย</small>
+                    <small>เลขที่139 หมู่1,ตำบลสนับทึบ อำเภอวังน้อย จังหวัดพระนครศรีอยุธยา 13170, ประเทศไทย</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center py-3"style= "color: #070707;">
                     <small class="far fa-clock me-2"></small>
@@ -57,7 +57,11 @@
             <div class="col-lg-5 px-5 text-end"style= "color: #070707;">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
                     <small class="fa fa-phone-alt me-2"></small>
-                    <small>+063-849-3429</small>
+                    <small>+06-5145-3994</small>
+                </div>
+                <div class="h-100 d-inline-flex align-items-center py-3 me-4">
+                    <small class="fa fa-envelope me-3"></small>
+                    <small>phoenixforlife.foundation@gmail.com</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <a class="btn btn-sm-square rounded-circle bg-white me-1" href=""><i class="fab fa-facebook-f"style= "color: #070707;"></i></a>
@@ -71,7 +75,7 @@
        <!-- Navbar Start -->
        <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h1 class="m-0"style= "font-family: 'Kanit';color: #070707;"><img src="img/logo.png" alt="" style="height: 200px ;width: 200px;"></i>มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์</h1>
+            <h1 class="m-0"style= "font-family: 'Kanit';color: #070707;"><img src="img/logo.webp" alt="" style="height: 200px ;width: 200px;"></i>มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์</h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -88,6 +92,7 @@
                 </div>
                 <a href="service.html" class="nav-item nav-link">โครงการของเรา</a>
                 <a href="donate.html" class="nav-item nav-link">บริจาค</a>
+                <a href="blog.html" class="nav-item nav-link">ข่าวสาร</a>
                 <a href="contact.html" class="nav-item nav-link">ติดต่อเรา</a>
             </div>
         </div>
@@ -97,7 +102,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">ผู้ร่วมก่อตั้งและอาสาสมัครของเรา</h1>
+            <h1 class="display-3 text-white mb-3 animated slideInDown"style= "font-family: 'Kanit';">ผู้ร่วมก่อตั้งและอาสาสมัครของเรา</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="#">หน้าหลัก</a></li>
@@ -113,13 +118,13 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;">ผู้ก่อตั้งมูลนิธิ</h1>
+                <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;"><img src="img/icon/co-founder.webp" alt="" style="height: 60px ;width: 60px;">ผู้ก่อตั้งมูลนิธิ</h1>
             </div>
             <div class="row g-4">
             <center><div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative rounded overflow-hidden">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/about-2.png" alt="">
+                            <img class="img-fluid" src="img/about-2.webp" alt="">
                         </div>
                         <div class="bg-light text-center p-4">
                             <h4 style= "font-family: 'Kanit';color: #070707;">นายนรินทร์ สิรการัณย์</h4>
@@ -137,13 +142,13 @@
      <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;">ประธานกิตติมาศักดิ์</h1>
+                <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;"><img src="img/icon/co-founder.webp" alt="" style="height: 60px ;width: 60px;">ประธานกิตติมาศักดิ์</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative rounded overflow-hidden">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/test-1.jpg" alt="">
+                            <img class="img-fluid" src="img/test-1.webp" alt="">
                         </div>
                         <div class="bg-light text-center p-4">
                             <h4 style= "font-family: 'Kanit';color: #070707;">..................</h4>
@@ -155,7 +160,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative rounded overflow-hidden">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/test-1.jpg" alt="">
+                            <img class="img-fluid" src="img/test-1.webp" alt="">
                         </div>
                         <div class="bg-light text-center p-4">
                             <h4 style= "font-family: 'Kanit';color: #070707;">..................</h4>
@@ -167,7 +172,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative rounded overflow-hidden">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/test-1.jpg" alt="">
+                            <img class="img-fluid" src="img/test-1.webp" alt="">
                         </div>
                         <div class="bg-light text-center p-4">
                             <h4 style= "font-family: 'Kanit';color: #070707;">..................</h4>
@@ -179,7 +184,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative rounded overflow-hidden">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/test-1.jpg" alt="">
+                            <img class="img-fluid" src="img/test-1.webp" alt="">
                         </div>
                         <div class="bg-light text-center p-4">
                             <h4 style= "font-family: 'Kanit';color: #070707;">..................</h4>
@@ -197,13 +202,13 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;">คณะกรรมการ</h1>
+                <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;"><img src="img/icon/co-founder.webp" alt="" style="height: 60px ;width: 60px;">คณะกรรมการ</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative rounded overflow-hidden">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid" src="img/team-1.webp" alt="">
                         </div>
                         <div class="bg-light text-center p-4">
                             <h4 style= "font-family: 'Kanit';color: #070707;">พันตำรวจเอก ปิยบุตร ไพบูลย์</h4>
@@ -239,7 +244,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative rounded overflow-hidden">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/test-1.jpg" alt="">
+                            <img class="img-fluid" src="img/test-1.webp" alt="">
                         </div>
                         <div class="bg-light text-center p-4">
                             <h4 style= "font-family: 'Kanit';color: #070707;">..................</h4>
@@ -257,7 +262,7 @@
          <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;">อาสาสมาชิก</h1>
+                    <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;"><img src="img/icon/co-founder.webp" alt="" style="height: 60px ;width: 60px;">อาสาสมาชิก</h1>
                 </div>
                 <div class="row g-4">
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -307,9 +312,9 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="mb-4"style= "font-family: 'Kanit';color: #050505;">ที่ตั้งมูลนิธิ</h5>
-                    <p class="mb-2"style= "color: #050505;"><i class="fa fa-map-marker-alt me-3"></i>พระนครศรีอยุธยา, ประเทศไทย</p>
-                    <p class="mb-2"style= "color: #050505;"><i class="fa fa-phone-alt me-3"></i>+063-849-3429</p>
-                    <p class="mb-2" style= "color: #050505;"><i class="fa fa-envelope me-3"></i>@mail.com</p>
+                    <p class="mb-2"style= "color: #050505;"><i class="fa fa-map-marker-alt me-3"></i>เลขที่139 หมู่1,ตำบลสนับทึบ อำเภอวังน้อย จังหวัดพระนครศรีอยุธยา 13170, ประเทศไทย</p>
+                    <p class="mb-2"style= "color: #050505;"><i class="fa fa-phone-alt me-3"></i>+06-5145-3994</p>
+                    <p class="mb-2" style= "color: #050505;"><i class="fa fa-envelope me-3"></i>phoenixforlife.foundation@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-youtube"></i></a>
