--- a/detail2.html
+++ b/detail2.html
@@ -41,8 +41,8 @@
     </div>
     <!-- Spinner End -->
 
-       <!-- Topbar Start -->
-       <div class="container-fluid bg-light p-0 wow fadeIn" data-wow-delay="0.1s">
+      <!-- Topbar Start -->
+      <div class="container-fluid bg-light p-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4"style= "color: #070707;">
@@ -102,107 +102,117 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown"style= "font-family: 'Kanit';">ติดต่อเรา</h1>
+            <h1 class="display-3 text-white mb-3 animated slideInDown"style= "font-family: 'Kanit';">โครงการบริจาคเครื่องกรองน้ำให้สถานรับเลี้ยงเด็กกำพร้า</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="#">หน้าหลัก</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="#">หน้า</a></li>
-                    <li class="breadcrumb-item text-white active" aria-current="page">ติดต่อเรา</li>
+                    <li class="breadcrumb-item text-white active" aria-current="page">ข่าวสารโครงการ</li>
                 </ol>
             </nav>
         </div>
     </div>
     <!-- Page Header End -->
 
-    <!-- Contact Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-4">
-                <div class="col-lg-4">
-                    <div class="h-100 bg-light rounded d-flex align-items-center p-5">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;">
-                            <i class="fa fa-map-marker-alt"style= "color: #070707;"></i>
-                        </div>
-                        <div class="ms-4">
-                            <p class="mb-2"style= "color: #070707;">ที่ตั้งมูลนิธิ</p>
-                            <h5 class="mb-0"style= "font-family: 'Kanit';color: #070707;">เลขที่139 หมู่1,ตำบลสนับทึบ อำเภอวังน้อย จังหวัดพระนครศรีอยุธยา 13170, ประเทศไทย</h5>
-                        </div>
+    <!-- Blog Start -->
+    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="container py-5">
+            <div class="row g-5">
+                <div class="col-lg-8">
+                    <!-- Blog Detail Start -->
+                    <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                        <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;"><img src="img/icon/project.webp" alt="" style="height: 60px ;width: 60px;">โครงการบริจาคเครื่องกรองน้ำให้สถานรับเลี้ยงเด็กกำพร้า</h1>
+                    </div>
+                    <div class="mb-5">
+                        <img class="img-fluid w-100 rounded mb-5" src="img/p5.webp" alt="">
+                        <h1 class="mb-4"style= "font-family: 'Kanit';color: #fa7304;">โครงการบริจาคเครื่องกรองน้ำให้สถานรับเลี้ยงเด็กกำพร้า</h1>
+                        <p>โครงการบริจาคเครื่องกรองน้ำให้สถานรับเลี้ยงเด็กกำพร้า จำนวน 4 เครื่องเพื่อให้เด็กๆในสถานรับเลี้ยงแห่งนี้ได้มีน้ำสะอาดไว้อุปโภคบริโภค.</p>
+                    </div>
+                    <!-- Blog Detail End -->
+                </div>
+    
+                       <!-- Sidebar Start -->
+            <div class="col-lg-4">
+                <!-- Search Form Start -->
+                <div class="mb-5 wow slideInUp" data-wow-delay="0.1s">
+                    <div class="input-group">
+                        <input type="text" class="form-control p-3" placeholder="ค้นหา...">
+                        <button class="btn px-4"style= "color: #070707; background: linear-gradient(to right, #c02425, #f0cb35);"><i class="bi bi-search"></i></button>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="h-100 bg-light rounded d-flex align-items-center p-5">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;">
-                            <i class="fa fa-phone-alt "style= "color: #070707;"></i>
-                        </div>
-                        <div class="ms-4">
-                            <p class="mb-2"style= "color: #070707;">ติดต่อเรา</p>
-                            <h5 class="mb-0"style= "font-family: 'Kanit';color: #070707;">+06-5145-3994</h5>
-                        </div>
+                <!-- Search Form End -->
+
+                <!-- Category Start -->
+                <div class="mb-5 wow slideInUp" data-wow-delay="0.1s">
+                    <div class="section-title section-title-sm position-relative pb-3 mb-4">
+                        <h3 class="mb-0"style= "font-family: 'Kanit';color: #070707;">โครงการของเรา</h3>
+                    </div>
+                    <div class="link-animated d-flex flex-column justify-content-start">
+                        <a class="h5 fw-semi-bold bg-light rounded py-2 px-3 mb-2" href="blog.html"style= "font-family: 'Kanit';color: #070707;"><i class="bi bi-arrow-right me-2"></i>บริจาคเครื่องกรองน้ำ</a>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="h-100 bg-light rounded d-flex align-items-center p-5">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;">
-                            <i class="fa fa-envelope-open "style= "color: #070707;"></i>
-                        </div>
-                        <div class="ms-4">
-                            <p class="mb-2"style= "color: #070707;">อีเมล์</p>
-                            <h5 class="mb-0"style= "font-family: 'Kanit';color: #070707;font-size:16px;">phoenixforlife.foundation@gmail.com</h5>
-                        </div>
+                <!-- Category End -->
+
+                <!-- Recent Post Start -->
+                <div class="mb-5 wow slideInUp" data-wow-delay="0.1s">
+                    <div class="section-title section-title-sm position-relative pb-3 mb-4">
+                        <h3 class="mb-0"style= "font-family: 'Kanit';color: #070707;">โพสล่าสุด</h3>
+                    </div>
+                    <div class="d-flex rounded overflow-hidden mb-3">
+                        <img class="img-fluid" src="img/p2.webp" style="width: 100px; height: 100px; object-fit: cover;" alt="">
+                        <a href="detail1.html" class="h5 fw-semi-bold d-flex align-items-center bg-light px-3 mb-0">โครงการบริจาคเครื่องกรองน้ำให้โรงเรียนบ้านหนองหมูน้อย
+                        </a>
+                    </div>
+                    <div class="d-flex rounded overflow-hidden mb-3">
+                        <img class="img-fluid" src="img/p5.webp" style="width: 100px; height: 100px; object-fit: cover;" alt="">
+                        <a href="detail2.html" class="h5 fw-semi-bold d-flex align-items-center bg-light px-3 mb-0">โครงการบริจาคเครื่องกรองน้ำให้สถานรับเลี้ยงเด็กกำพร้า
+                        </a>
                     </div>
                 </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="bg-light rounded p-5">
-                        <h2 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;"><img src="img/icon/phone.webp" alt="" style="height: 60px ;width: 60px;">ติดต่อหาเราหรือปรึกษาอาการทางจิตกับจิตแพทย์ระดับมืออาชีพ</h2>
-                        <h3 style= "font-family: 'Kanit';color: #fa7304;">สนใจเป็นอาสาสมัครโครงการหรือผู้ร่วมโครงการบริจาคหรือปรึกษาอาการทางจิตกับจิตแพทย์ระดับมืออาชีพ</h3>
-                        <p class="mb-4"style= "color: #070707;">เพื่อช่วยให้สังคมของเราหน้าอยู่ยิ่งขึ้น และเพื่อเยาวชนอนาคตของประเทศเรา</p>
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                        <label for="name">ชื่อ-สกุล...</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                        <label for="email">อีเมล์...</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                        <label for="subject">ชื่อเรื่อง...</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
-                                        <label for="message">ข้อความ...</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn w-100 py-3" type="submit"style= "color: #070707; background: linear-gradient(to right, #c02425, #f0cb35);">ส่งข้อความ</button>
-                                </div>
-                            </div>
-                        </form>
+                <!-- Recent Post End -->
+
+                <!-- Image Start -->
+                <div class="mb-5 wow slideInUp" data-wow-delay="0.1s">
+                    <img src="img/blog-1.jpg" alt="" class="img-fluid rounded">
+                </div>
+                <!-- Image End -->
+
+                <!-- Tags Start -->
+                <div class="mb-5 wow slideInUp" data-wow-delay="0.1s">
+                    <div class="section-title section-title-sm position-relative pb-3 mb-4">
+                        <h3 class="mb-0"style= "font-family: 'Kanit';color: #070707;">แท็กคลาวด์</h3>
+                    </div>
+                    <div class="d-flex flex-wrap m-n1">
+                        <a href="" class="btn btn-light m-1">ช่วยเหลือเด็กกำพร้าและผู้ยากไร้</a>
+                        <a href="" class="btn btn-light m-1">ช่วยบรรเทาผลกระทบจากสาธารณภัย</a>
+                        <a href="" class="btn btn-light m-1">ช่วยเหลือผู้สูงอายุและคนชรา</a>
+                        <a href="" class="btn btn-light m-1">ช่วยสมทบทุนในการจัดหาอุปกรณ์ทางการแพทย์</a>
+                        <a href="" class="btn btn-light m-1">ช่วยเหลือผู้ป่วยที่มีอาการทางจิต</a>
+                        <a href="" class="btn btn-light m-1">ช่วยเหลือสังคมในทุกๆด้าน</a>
                     </div>
                 </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <div class="h-100" style="min-height: 400px;">
-                        <iframe class="rounded w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d247334.53422468767!2d100.35315898810026!3d14.392418708747442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e2736f5bfd8f7f%3A0x1019237450c4860!2sPhra%20Nakhon%20Si%20Ayutthaya!5e0!3m2!1sen!2sth!4v1702091185564!5m2!1sen!2sth"
-                        frameborder="0" allowfullscreen="" aria-hidden="false"
-                        tabindex="0"></iframe>
-                    </div>
+                <!-- Tags End -->
+
+            
+            <!-- Plain Text Start -->
+            <div class="wow slideInUp" data-wow-delay="0.1s">
+                <div class="section-title section-title-sm position-relative pb-3 mb-4">
+                    <h3 class="mb-0"style= "font-family: 'Kanit';color: #070707;">ยินดีรับสมัครผู้มีอุดมการเดียวกัน</h3>
+                </div>
+                <div class="bg-light text-center" style="padding: 30px;">
+                    <p>ช่วยเหลือเด็กกำพร้าและผู้ยากไร้,ช่วยบรรเทาผลกระทบจากสาธารณภัย,ช่วยเหลือผู้สูงอายุและคนชรา,ช่วยสมทบทุนในการจัดหาอุปกรณ์ทางการแพทย์,ช่วยเหลือผู้ป่วยที่มีอาการทางจิต,ช่วยเหลือสังคมในทุกๆด้าน</p>
+                    <a href="donate.html" class="btn  py-2 px-4"style= "color: #070707; background: linear-gradient(to right, #c02425, #f0cb35);">อ่านเพิ่มเติม</a>
                 </div>
             </div>
+            <!-- Plain Text End -->
         </div>
+        <!-- Sidebar End -->
     </div>
-    <!-- Contact End -->
+</div>
+</div>
+<!-- Blog End -->
 
-    <!-- Footer Start -->
+     <!-- Footer Start -->
   <div class="container-fluid  text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s"style="background: linear-gradient(to right, #c02425, #f0cb35);">
     <div class="container py-5">
         <div class="row g-5">
@@ -238,23 +248,23 @@
 </div>
 <!-- Footer End -->
 
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
+<!-- Back to Top -->
+<a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
 
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/tempusdominus/js/moment.min.js"></script>
-    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+<!-- JavaScript Libraries -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="lib/wow/wow.min.js"></script>
+<script src="lib/easing/easing.min.js"></script>
+<script src="lib/waypoints/waypoints.min.js"></script>
+<script src="lib/counterup/counterup.min.js"></script>
+<script src="lib/owlcarousel/owl.carousel.min.js"></script>
+<script src="lib/tempusdominus/js/moment.min.js"></script>
+<script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
+<script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+<!-- Template Javascript -->
+<script src="js/main.js"></script>
 </body>
 
 </html>
