--- a/service.html
+++ b/service.html
@@ -47,7 +47,7 @@
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4"style= "color: #070707;">
                     <small class="fa fa-map-marker-alt me-2"></small>
-                    <small>พระนครศรีอยุธยา, ประเทศไทย</small>
+                    <small>เลขที่139 หมู่1,ตำบลสนับทึบ อำเภอวังน้อย จังหวัดพระนครศรีอยุธยา 13170, ประเทศไทย</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center py-3"style= "color: #070707;">
                     <small class="far fa-clock me-2"></small>
@@ -57,7 +57,11 @@
             <div class="col-lg-5 px-5 text-end"style= "color: #070707;">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
                     <small class="fa fa-phone-alt me-2"></small>
-                    <small>+063-849-3429</small>
+                    <small>+06-5145-3994</small>
+                </div>
+                <div class="h-100 d-inline-flex align-items-center py-3"style= "color: #070707;">
+                    <small class="fa fa-envelope me-3"></small>
+                    <small>phoenixforlife.foundation@gmail.com</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <a class="btn btn-sm-square rounded-circle bg-white me-1" href=""><i class="fab fa-facebook-f"style= "color: #070707;"></i></a>
@@ -71,7 +75,7 @@
        <!-- Navbar Start -->
        <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h1 class="m-0"style= "font-family: 'Kanit';color: #070707;"><img src="img/logo.png" alt="" style="height: 200px ;width: 200px;"></i>มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์</h1>
+            <h1 class="m-0"style= "font-family: 'Kanit';color: #070707;"><img src="img/logo.webp" alt="" style="height: 200px ;width: 200px;"></i>มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์</h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -88,6 +92,7 @@
                 </div>
                 <a href="service.html" class="nav-item nav-link">โครงการของเรา</a>
                 <a href="donate.html" class="nav-item nav-link">บริจาค</a>
+                <a href="blog.html" class="nav-item nav-link">ข่าวสาร</a>
                 <a href="contact.html" class="nav-item nav-link">ติดต่อเรา</a>
             </div>
         </div>
@@ -97,7 +102,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">โครงการของเรา</h1>
+            <h1 class="display-3 text-white mb-3 animated slideInDown"style= "font-family: 'Kanit';">โครงการของเรา</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="#">หน้าหลัก</a></li>
@@ -113,14 +118,14 @@
        <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;">โครงการของเรา</h1>
+                <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;"><img src="img/icon/verified.webp" alt="" style="height: 60px ;width: 60px;">โครงการของเรา</h1>
                 <h2 style= "font-family: 'Kanit';color: #070707;">โครงการภารกิจบรรเทาทุกข์ให้แก่สังคมของมูลนิธิเรา</h2>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item bg-light rounded h-100 p-5">
                         <div class="images" style="width: 300px; height: 300px;">
-                            <img class="img-fluid" src="img/p1.jpg" alt="">
+                            <img class="img-fluid" src="img/p1.webp" alt="">
                         </div>
                         <h4 class="mb-3"style= "font-family: 'Kanit';color: #070707;">ช่วยเหลือเด็กยากไร้ เด็กด้อยโอกาสและเด็กกำพร้า</h4>
                         <p class="mb-4" style= "color: #070707;"><i class="far fa-check-circle me-3"></i>เพื่อช่วยเหลือเด็กยากไร้ เด็กด้อยโอกาสและเด็กกำพร้า ให้มีคุณภาพชีวิตที่ดีขึ้น.</p>
@@ -129,7 +134,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item bg-light rounded h-100 p-5">
                         <div class="images" style="width: 300px; height: 300px;">
-                            <img class="img-fluid" src="img/p4.jpeg" alt="">
+                            <img class="img-fluid" src="img/p4.webp" alt="">
                         </div>
                         <h4 class="mb-3"style= "font-family: 'Kanit';color: #070707;">ช่วยเหลือผู้สูงอายุและคนชรา</h4>
                         <p class="mb-4" style= "color: #070707;"><i class="far fa-check-circle me-3"></i>เพื่อช่วยเหลือผู้สูงอายุและคนชราที่ขาดแคลนในด้านต่างๆ.</p>
@@ -138,7 +143,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item bg-light rounded h-100 p-5">
                         <div class="images" style="width: 300px; height: 300px;">
-                            <img class="img-fluid" src="img/p5.jpg" alt="">
+                            <img class="img-fluid" src="img/p5.webp" alt="">
                         </div>
                         <h4 class="mb-3"style= "font-family: 'Kanit';color: #070707;">ช่วยสมทบทุนในการจัดหาอุปกรณ์ทางการแพทย์</h4>
                         <p class="mb-4" style= "color: #070707;"><i class="far fa-check-circle me-3"></i>เพื่อช่วยสมทบทุนในการจัดหาอุปกรณ์ทางการแพทย์สำหรับผู้ป่วย.</p>
@@ -147,7 +152,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item bg-light rounded h-100 p-5">
                         <div class="images" style="width: 300px; height: 300px;">
-                            <img class="img-fluid" src="img/p6.jpg" alt="">
+                            <img class="img-fluid" src="img/p6.webp" alt="">
                         </div>
                         <h4 class="mb-3"style= "font-family: 'Kanit';color: #070707;">ช่วยเหลือด้านค่ารักษาพยาบาล</h4>
                         <p class="mb-4" style= "color: #070707;"><i class="far fa-check-circle me-3"></i>เพื่อช่วยเหลือด้านค่ารักษาพยาบาล แก่ผู้ป่วยอนาถา ทุพพลภาพ</p>
@@ -156,7 +161,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item bg-light rounded h-100 p-5">
                         <div class="images" style="width: 300px; height: 300px;">
-                            <img class="img-fluid" src="img/p7.jpg" alt="">
+                            <img class="img-fluid" src="img/p7.webp" alt="">
                         </div>
                         <h4 class="mb-3"style= "font-family: 'Kanit';color: #070707;">สนับสนุนทำนุบำรุงพระพุทธศาสนา</h4>
                         <p class="mb-4" style= "color: #070707;"><i class="far fa-check-circle me-3"></i>เพื่อสนับสนุนทำนุบำรุงพระพุทธศาสนา.</p>
@@ -165,7 +170,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item bg-light rounded h-100 p-5">
                         <div class="images" style="width: 300px; height: 300px;">
-                            <img class="img-fluid" src="img/p8.jpg" alt="">
+                            <img class="img-fluid" src="img/p8.webp" alt="">
                         </div>
                         <h4 class="mb-3"style= "font-family: 'Kanit';color: #070707;">ช่วยบรรเทาผลกระทบจากสาธารณภัย</h4>
                         <p class="mb-4" style= "color: #070707;"><i class="far fa-check-circle me-3"></i>เพื่อช่วยบรรเทาผลกระทบจากสาธารณภัย เช่น เพลิงไหม้ น้ำท่วม และแผ่นดินไหว.</p>
@@ -174,7 +179,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item bg-light rounded h-100 p-5">
                         <div class="images" style="width: 300px; height: 300px;">
-                            <img class="img-fluid" src="img/p3.jpg" alt="">
+                            <img class="img-fluid" src="img/p3.webp" alt="">
                         </div>
                         <h4 class="mb-3"style= "font-family: 'Kanit';color: #070707;">ร่วมมือกับภาครัฐในการจัดกิจกรรมต่างๆ</h4>
                         <p class="mb-4" style= "color: #070707;"><i class="far fa-check-circle me-3"></i>เพื่อร่วมมือกับภาครัฐในการจัดกิจกรรมต่างๆ ให้สังคมหน้าอยู่.</p>
@@ -183,7 +188,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item bg-light rounded h-100 p-5">
                         <div class="images" style="width: 300px; height: 300px;">
-                            <img class="img-fluid" src="img/p2.jpg" alt="">
+                            <img class="img-fluid" src="img/p2.webp" alt="">
                         </div>
                         <h4 class="mb-3"style= "font-family: 'Kanit';color: #070707;">ช่วยเหลือสังคมในทุกๆด้าน</h4>
                         <p class="mb-4" style= "color: #070707;"><i class="far fa-check-circle me-3"></i>เพื่อช่วยเหลือสังคมในทุกๆด้านให้สังคมพัฒนาไปในทางที่ดียิ่งขึ้น.</p>
@@ -192,7 +197,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item bg-light rounded h-100 p-5">
                         <div class="images" style="width: 300px; height: 300px;">
-                            <img class="img-fluid" src="img/p9.jpg" alt="">
+                            <img class="img-fluid" src="img/p9.webp" alt="">
                         </div>
                         <h4 class="mb-3"style= "font-family: 'Kanit';color: #070707;">ช่วยเหลือผู้ป่วยที่มีอาการทางจิต</h4>
                         <p class="mb-4" style= "color: #070707;"><i class="far fa-check-circle me-3"></i>เพื่อช่วยเหลือและให้คำปรึกษาด้านสุขภาพจิตแก่บุคคลทั่วไป.</p>
@@ -208,7 +213,7 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;">ติดต่อหาเราหรือปรึกษาอาการทางจิตกับจิตแพทย์ระดับมืออาชีพ</h1>
+                    <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;"><img src="img/icon/phone.webp" alt="" style="height: 60px ;width: 60px;">ติดต่อหาเราหรือปรึกษาอาการทางจิตกับจิตแพทย์ระดับมืออาชีพ</h1>
                     <h2 style= "font-family: 'Kanit';color: #fa7304;">สนใจเป็นอาสาสมัครโครงการหรือผู้ร่วมโครงการบริจาคหรือปรึกษาอาการทางจิตกับจิตแพทย์ระดับมืออาชีพ</h2>
                     <p class="mb-4"style= "color: #070707;">เพื่อช่วยให้สังคมของเราหน้าอยู่ยิ่งขึ้น และเพื่อเยาวชนอนาคตของประเทศเรา</p>
                     <div class="bg-light rounded d-flex align-items-center p-5 mb-4">
@@ -217,7 +222,7 @@
                         </div>
                         <div class="ms-4">
                             <p class="mb-2"style= "color: #070707;">ติดต่อเรา</p>
-                            <h5 class="mb-0">+063-849-3429</h5>
+                            <h5 class="mb-0">+06-5145-3994</h5>
                         </div>
                     </div>
                     <div class="bg-light rounded d-flex align-items-center p-5">
@@ -226,7 +231,7 @@
                         </div>
                         <div class="ms-4">
                             <p class="mb-2"style= "color: #070707;">ส่งอีเมล์มาหาเรา</p>
-                            <h5 class="mb-0">@mail.com</h5>
+                            <h5 class="mb-0">phoenixforlife.foundation@gmail.com</h5>
                         </div>
                     </div>
                 </div>
@@ -280,52 +285,52 @@
     </div>
     <!-- Appointment End -->
 
-   <!-- Testimonial Start -->
-   <div class="container-xxl py-5">
-    <div class="container">
-        <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-            <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;">ความคิดเห็น</h1>
-            <h2 style= "font-family: 'Kanit';color: #070707;">ความคิดเห็นของผู้ร่วมโครงการ</h2>
-        </div>
-        <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
-            <div class="testimonial-item text-center">
-                <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-1.jpg" style="width: 100px; height: 100px;">
-                <div class="testimonial-text rounded text-center p-4">
-                    <p style= "color: #050505;">เป็นมูลนิธิที่ดีมากๆมีโครงการช่วยเหลือสังคมมากมายที่ฉันสนใจเข้าร่วมด้วยทุกโครงการเลย.</p>
-                    <h5 class="mb-1"style= "color: #050505;">อาสา A</h5>
-                    <span style= "color: #050505;">พยาบาล</span>
-                </div>
+    <!-- Testimonial Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;"><img src="img/icon/chat.webp" alt="" style="height: 60px ;width: 60px;">ความคิดเห็น</h1>
+                <h2 style= "font-family: 'Kanit';color: #070707;">ความคิดเห็นของผู้ร่วมโครงการ</h2>
             </div>
-            <div class="testimonial-item text-center">
-                <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-2.jpg" style="width: 100px; height: 100px;">
-                <div class="testimonial-text rounded text-center p-4">
-                    <p style= "color: #050505;">ถ้าไม่มีมูลนิธินี้ช่วยอีกแรง สังคมคงไม่ดีขึ้นเหมือนวันนี้.</p>
-                    <h5 class="mb-1"style= "color: #050505;">อาสา B</h5>
-                    <span style= "color: #050505;">นักออกแบบ</span>
+            <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/team-1.webp" style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <p style= "color: #070707;">“การให้ คือการทำบุญที่มีพลังยิ่งใหญ่ที่สุด ทั้งผู้ให้ และผู้รับ ต่างก็ได้รับบุญเหมือนกัน”</p>
+                        <h5 class="mb-1"style= "color: #070707;">พันตำรวจเอก ปิยบุตร ไพบูลย์</h5>
+                        <span style= "color: #070707;">รองผู้บังคับการตำรวจภูธรจังหวัดอุดรธานี</span>
+                    </div>
                 </div>
-            </div>
-            <div class="testimonial-item text-center">
-                <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-3.jpg" style="width: 100px; height: 100px;">
-                <div class="testimonial-text rounded text-center p-4">
-                    <p style= "color: #050505;">มีกิจกรรมให้เยาวชนและคนทั่วไปได้เข้าร่วมโครงการที่มีส่วนช่วยสังคมได้เข้าถึงได้ง่าย.</p>
-                    <h5 class="mb-1"style= "color: #050505;">อาสา C </h5>
-                    <span style= "color: #050505;">นักศึกษา</span>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/team-2.webp" style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <p style= "color: #070707;">“การได้มีส่วนช่วยสังคม เป็นหนึ่งในหน้าที่ของคนไทย”</p>
+                        <h5 class="mb-1"style= "color:#070707;">นาย รวมชัย มานะ</h5>
+                        <span style= "color: #070707;">อัยการจังหวัดประจำสำนักงานอัยการสูงสุด</span>
+                    </div>
+                </div>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/team-3.webp" style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <p style= "color: #070707;">“ไหมเส้นเดียวไม่เป็นด้าย ต้นไม้ต้นเดียวไม่เป็นป่า ความสามัคคี เป็นพลังความสำเร็จและประโยชน์ของส่วนรวม”</p>
+                        <h5 class="mb-1"style= "color:#070707;">พันเอก นราธิป จันทะแจ้ง</h5>
+                        <span style= "color: #070707;">ผู้อำนวยการกองการกีฬา กรมสวัสดิการทหารบก</span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Testimonial End -->
+    <!-- Testimonial End -->
         
-   <!-- Footer Start -->
-   <div class="container-fluid  text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s"style="background: linear-gradient(to right, #c02425, #f0cb35);">
+  <!-- Footer Start -->
+  <div class="container-fluid  text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s"style="background: linear-gradient(to right, #c02425, #f0cb35);">
     <div class="container py-5">
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
                 <h5 class="mb-4"style= "font-family: 'Kanit';color: #050505;">ที่ตั้งมูลนิธิ</h5>
-                <p class="mb-2"style= "color: #050505;"><i class="fa fa-map-marker-alt me-3"></i>พระนครศรีอยุธยา, ประเทศไทย</p>
-                <p class="mb-2"style= "color: #050505;"><i class="fa fa-phone-alt me-3"></i>+063-849-3429</p>
-                <p class="mb-2" style= "color: #050505;"><i class="fa fa-envelope me-3"></i>@mail.com</p>
+                <p class="mb-2"style= "color: #050505;"><i class="fa fa-map-marker-alt me-3"></i>เลขที่139 หมู่1,ตำบลสนับทึบ อำเภอวังน้อย จังหวัดพระนครศรีอยุธยา 13170, ประเทศไทย</p>
+                <p class="mb-2"style= "color: #050505;"><i class="fa fa-phone-alt me-3"></i>+06-5145-3994</p>
+                <p class="mb-2" style= "color: #050505;"><i class="fa fa-envelope me-3"></i>phoenixforlife.foundation@gmail.com</p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-youtube"></i></a>
