--- a/donate.html
+++ b/donate.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์ |Phoenix for life</title>
+    <title>บริจาค|มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์ |Phoenix for life</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์,Phoenixforlife,ช่วยเหลือเด็กกำพร้าและผู้ยากไร้" name="keywords">
     <meta content="มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์ |Phoenixforlife ช่วยเหลือเด็กกำพร้าและผู้ยากไร้" name="description">
